<resources>
    <string name="app_name">lo ultimo en noticias colombia</string>
    <string name="bienvenida">bienvenido a lo ultimo en noticias de todo colombia espero disfrutes la app</string>
    <string name="title_activity_navigation_bottom_session">NavigationBottomSession</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="caracol_noticias">Caracol Noticias</string>
    <string name="el_tiempo">El Tiempo</string>
    <string name="el_espectador">El Espectador</string>
    <string name="publimetro">Publimetro</string>
    <string name="noticias_rcn">Noticias Rcn</string>
    <string name="el_heraldo">El Heraldo</string>
    <string name="la_red">La Red</string>
    <string name="el_colombiano">El Colombiano</string>
    <string name="q_hubo">Q,hubo</string>
    <string name="el_pais">El Pais</string>
    <string name="adn">ADN</string>
    <string name="extra">EXTRA</string>
    <string name="la_cronica_del_quindio">La Cronica Del Quindio</string>
    <string name="semana">semana</string>
    <string name="politica_y_general">Politica y General</string>
    <string name="farandula_nacional">Farandula Nacional</string>
    <string name="colombia_com">Colombia.Com</string>
    <string name="el_universal">el universal</string>
    <string name="alerta_bogota">alerta bogota</string>
    <string name="msn">msn</string>
    <string name="la_mega">La mega</string>
    <string name="politica_privacidad">Politica Privacidad</string>
    <string name="politica_de_privacidad_y_contenido">POLITICA DE PRIVACIDAD Y CONTENIDO</string>
    <string name="linea1_de_politica">La app no recoge ningun dato de caracter personal del usuario como por ejemplo,nombre,fotografias o localizacion.</string>
    <string name="linea2_de_politica_privacidad">En consecuencia la app no comparte ningun dato personal con otra entidad o terceras personas.</string>
    <string name="linea3_de_politica_privacidad">Las revistas o periodicos que aparezcan aca no son propiedad de nuestra app son propiedad y edicion de cada revista o periodico. nosotros solo coloco los link de cada pagina web de la revista o periodico para facilitarte la lectura de las revitas o periodicos y te facilitamos tener toda la prensa en un solo lugar.</string>
    <string name="linea4_politica_privacidad">Permitimos que terceras compañias publiquen anuncios y recopilen cierta informacion anonima cuando visite nuestra app. Estas empresas pueden utilizar informacion anonima, como su ID de publicidad de Google, el tipo y la version de su dispositivo, la actividad de navegacion, la ubicacion y otros datos tecnicos relacionados con su disposito, a fin de proporcionar anuncios.</string>
    <string name="linea3_politica_privacidad">Esta app es 100% gratuita y funciona con internet, versiones menores a android 6.0 u obsoletos puede que no funcione correctamente.</string>
    <string name="rcn_radio">RCN RADIO</string>
    <string name="caracol_radio">CARACOL RADIO</string>
    <string name="espectador">El espectador</string>
    <string name="la_republica">La republica</string>
    <string name="portafolio">portafolio</string>
    <string name="el_pilon">el pilon</string>
    <string name="alerta_paisa">Alerta paisa</string>
    <string name="la_kalle">la kalle</string>
    <string name="w_radio">w radio</string>
    <string name="canal_uno">Canal uno</string>
    <string name="sport_caracol">sport caracol</string>
    <string name="politic_general">Politic@ General</string>
</resources>