<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colombia"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.noticias.migueldev.PoliticayGeneralActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/carousel"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:autoPlay="true"
                app:autoPlayDelay="2000"
                app:showNavigationButtons="false"
                app:bottomShadowHeight="10dp"
                android:background="@color/gris"
                app:topShadowHeight="10dp"/>

            <Button
                android:id="@+id/buttonLaCronicaDelQuindi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:text="@string/la_cronica_del_quindio"
                app:layout_constraintBottom_toTopOf="@+id/buttonEXTRA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonEXTRA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/extra"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonADN"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonADN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/adn"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonCaracol"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonCaracol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/caracol_noticias"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonElTiempo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonLaRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/la_red"
                android:textColor="@color/pink"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonElColombiano"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonEspectador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/el_espectador"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonPubliMetro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonPubliMetro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/publimetro"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonRcn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonRcn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/noticias_rcn"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonElHeraldo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonElHeraldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/el_heraldo"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonLaRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonElTiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/el_tiempo"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonEspectador"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonElColombiano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/el_colombiano"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonQhubo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonQhubo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/q_hubo"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonElPais"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonElPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:text="@string/el_pais"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/Banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6713950183257774/3943615212"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>