<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/colombiaa2"
    tools:context="com.noticias.migueldev.EconomiaNacionalActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-33dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            tools:ignore="WebViewLayout">

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/carousel"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:background="@color/gris"
                app:autoPlay="true"
                app:autoPlayDelay="2000"
                app:bottomShadowHeight="10dp"
                app:showNavigationButtons="false"
                app:topShadowHeight="10dp" />

            <Button
                android:id="@+id/buttonRcnRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/rcn_radio"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonLaCronicaDelQuindio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonCaracolRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/caracol_radio"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonEXTRA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonEspectador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/espectador"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonADN"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonPubliMetro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/publimetro"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonElTiempo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonElHeraldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/el_heraldo"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonElColombiano"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonElTiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/el_tiempo"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonPubliMetro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonPortafolio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/portafolio"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonRcn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonELColombiano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/el_colombiano"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonElHeraldo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonElPilon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/el_pilon"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonElHeraldo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/Banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6713950183257774/1046823283"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>