<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/colombia"
    tools:context="com.noticias.migueldev.DeporteNacionalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-33dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="55dp"
            tools:ignore="WebViewLayout">

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/carousel"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:background="@color/gris"
                app:autoPlay="true"
                app:autoPlayDelay="2000"
                app:bottomShadowHeight="10dp"
                app:showNavigationButtons="false"
                app:topShadowHeight="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <Button
                android:id="@+id/buttonElTiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:rotationX="21"
                android:text="@string/el_tiempo"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonLaCronicaDelQuindio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <Button
                android:id="@+id/buttonElEspectador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:rotationX="21"
                android:text="@string/el_espectador"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonEXTRA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/buttonCanal1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:rotationX="21"
                android:text="@string/canal_uno"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonADN"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/buttonElHeraldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:rotationX="21"
                android:text="@string/el_heraldo"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonElTiempo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/buttonCaracol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:rotationX="21"
                android:text="@string/sport_caracol"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonElColombiano"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/buttonElPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:rotationX="21"
                android:text="@string/el_pais"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/buttonPubliMetro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/Banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6713950183257774/9934308496"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>